* 修改不能使用phalcon的BUG

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "scripts": {
         "post-create-project-cmd": [
-            "php artisan.php --help"
+            "php artisan.php --help",
+            "mkdir .phalcon"
         ]
     }
 }
