* 修改其他服务配置

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,14 @@ APP_URL=http://wx.lmx0536.cn/phalcon
 
 APPID=null
 APPSECRET=null
+
+MEMCACHED_HOST=127.0.0.1
+MEMCACHED_PORT=11211
+MEMCACHED_WEIGHT=1
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_AUTH=null
+REDIS_PERSISTENT=false
+REDIS_INDEX=0
+REDIS_PREFIX=phalcon:
