--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "limingxinleo/limx-func": "^2.1",
         "limingxinleo/limx-package": "^1.0",
-        "limingxinleo/phalcon-utils": "^1.0"
+        "limingxinleo/phalcon-utils": "^1.0",
+        "limingxinleo/limx-redis": "^1.0"
     },
     "scripts": {
         "post-create-project-cmd": [
