--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
 TEST=HELLO_PHALCON
 APP_URL=http://wx.lmx0536.cn/phalcon
 
-APPID=null
-APPSECRET=null
+DB_ADAPTER=Mysql
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=null
+DB_DBNAME=phalcon
+DB_CHARSET=utf8
 
-MEMCACHED_HOST=127.0.0.1
-MEMCACHED_PORT=11211
-MEMCACHED_WEIGHT=1
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
@@ -14,3 +18,8 @@ REDIS_AUTH=null
 REDIS_PERSISTENT=false
 REDIS_INDEX=0
 REDIS_PREFIX=phalcon:
+
+MEMCACHED_HOST=127.0.0.1
+MEMCACHED_PORT=11211
+MEMCACHED_WEIGHT=1
+
