--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 TEST=HELLO_PHALCON
 APP_URL=http://wx.lmx0536.cn/phalcon
+UNIQUE_ID=my-private-app
 
 DB_ADAPTER=Mysql
 DB_HOST=localhost
@@ -17,7 +18,6 @@ REDIS_PORT=6379
 REDIS_AUTH=null
 REDIS_PERSISTENT=false
 REDIS_INDEX=0
-REDIS_PREFIX=phalcon:
 
 MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
