--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_URL=http://wx.lmx0536.cn/phalcon
 UNIQUE_ID=my-private-app
 
 DB_ADAPTER=Mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USERNAME=root
 DB_PASSWORD=null
 DB_DBNAME=phalcon
