* 为phalcon定制测试数据库

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -3,10 +3,11 @@ adapter  = Mysql
 host     = "127.0.0.1"
 username = "root"
 password = "910123"
-dbname   = "laravel"
+dbname   = "phalcon"
 
 [application]
 controllersDir = "app/controllers/"
 modelsDir      = "app/models/"
 viewsDir       = "app/views/"
 baseUri        = "/"
+migrationsDir  = "storage/migrations/"
