* 增加log sql配置项

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TEST=HELLO_PHALCON
-APP_URL=http://wx.lmx0536.cn/phalcon
+APP_URL=http://demo.php.com/phalcon
 UNIQUE_ID=my-private-app
 
 DB_ADAPTER=Mysql
@@ -22,4 +22,6 @@ REDIS_INDEX=0
 MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
 MEMCACHED_WEIGHT=1
+
+LOG_SQL=true
 
