--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "limingxinleo/phalcon-utils": "^1.0",
         "vlucas/phpdotenv": "^2.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6",
+        "phalcon/incubator": "^3.0"
+    },
     "scripts": {
         "post-create-project-cmd": [
             "mkdir .phalcon",
