--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
             "mkdir .phalcon",
             "php -r \"copy('.env.example', '.env');\""
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
