--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.6",
         "phalcon/incubator": "^3.0",
-        "limingxinleo/limx-redis": "^1.0"
+        "limingxinleo/limx-redis": "^1.0",
+        "endroid/qrcode": "^1.7"
     },
     "scripts": {
         "post-create-project-cmd": [
