--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "scripts": {
         "post-create-project-cmd": [
             "mkdir .phalcon",
-            "php -r \"copy('.env.example', '.env');\""
+            "php -r \"copy('.env.example', '.env');\"",
+            "php run System\\Init storage"
         ]
     }
 }
