--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "post-create-project-cmd": [
             "mkdir .phalcon",
             "php -r \"copy('.env.example', '.env');\"",
-            "php run System\\\\Init storage"
+            "php run System\\Init storage"
         ]
     }
 }
