--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
-### default template
 # @author limx
 .idea
-.svn
 vendor/
 composer.lock
 .phalcon
 .env
-node_modules/
+public/uploads/
