--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
-        "limingxinleo/limx-package": "^1.0",
-        "phalcon/incubator": "^3.0"
+        "phalcon/incubator": "^3.0",
+        "limingxinleo/limx-package": "^1.0"
     },
     "scripts": {
         "post-create-project-cmd": [
