--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.6",
         "phalcon/incubator": "^3.0",
-        "limingxinleo/limx-package": "^1.0"
+        "limingxinleo/limx-package": "^1.0",
+        "limingxinleo/limx-func": "^2.2"
     },
     "scripts": {
         "post-create-project-cmd": [
