* 增加控制器配置

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -12,5 +12,9 @@ viewsDir       = "app/views/"
 migrationsDir  = "storage/migrations/"
 baseUri        = "/"
 
+[controller]
+namespace = "App\Controllers"
+baseClass = "Controller"
+
 [devtools]
 loader = "app/models/Model.php"
