* 增加模型配置

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -16,5 +16,9 @@ baseUri        = "/"
 namespace = "App\Controllers"
 baseClass = "Controller"
 
+[model]
+namespace = "App\Models"
+extends   = "Model"
+
 [devtools]
 loader = "app/models/Model.php"
