--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ MONGODB_USERNAME=null
 MONGODB_PASSWORD=null
 MONGODB_DB=null
 MONGODB_COLLECTION=null
-MONGODB_UTILS=false
+MONGODB_IS_UTILS=false
 
 MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
