* 增加是否开启mongo集合类KEY键

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ MONGODB_PASSWORD=null
 MONGODB_DB=null
 MONGODB_COLLECTION=null
 MONGODB_IS_UTILS=false
+MONGODB_IS_COLLECTION=false
 
 MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
