--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
-        "phalcon/incubator": "^3.0",
-        "limingxinleo/limx-package": "^1.0"
+        "phalcon/incubator": "^3.0"
     },
     "scripts": {
         "post-create-project-cmd": [
