* 增加默认消息队列 配置

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ REDIS_PERSISTENT=false
 REDIS_INDEX=0
 REDIS_IS_UTILS=false
 
+QUEUE_KEY=phalcon:queue:default
+QUEUE_DELAY_KEY=phalcon:queue:delay
+
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
 MONGODB_CONNECT=true
