* 增加通用消息队列错误捕获机制

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ REDIS_IS_UTILS=false
 
 QUEUE_KEY=phalcon:queue:default
 QUEUE_DELAY_KEY=phalcon:queue:delay
+QUEUE_ERROR_KEY=phalcon:queue:error
 
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
