--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
         "limingxinleo/phalcon-utils": "^1.3.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "limingxinleo/x-phalcon-console": "^0.0.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
