--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "limingxinleo/x-phalcon-console": "^0.0.5",
         "limingxinleo/x-phalcon-logger": "^0.0.1",
         "limingxinleo/x-redis": "^0.0.1",
-        "limingxinleo/x-phalcon-db": "^0.0.1"
+        "limingxinleo/x-phalcon-db": "^0.0.1",
+        "limingxinleo/x-console-color": "^0.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
