--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,7 @@
     "require": {
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
-        "limingxinleo/x-phalcon-console": "^0.0.5",
-        "limingxinleo/x-phalcon-logger": "^0.0.1",
-        "limingxinleo/x-redis": "^0.0.1",
-        "limingxinleo/x-phalcon-db": "^0.0.1",
-        "limingxinleo/x-console-color": "^0.0.1",
-        "limingxinleo/support-str": "^1.0.1",
-        "vlucas/phpdotenv": "^2.4"
+        "phalcon-project-library": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
