--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
-        "phalcon-project-library": "^1.0.0"
+        "limingxinleo/phalcon-project-library": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
