--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     "require": {
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
-        "limingxinleo/phalcon-project-library": "^1.0"
+        "limingxinleo/phalcon-project-library": "^1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
-        "phalcon/incubator": "^3.0"
+        "phalcon/incubator": "^3.0",
+        "phalcon/dd": "^1.0"
     },
     "scripts": {
         "post-create-project-cmd": [
