--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.6",
         "phalcon/incubator": "^3.0",
-        "phalcon/dd": "^1.0"
+        "phalcon/dd": "^1.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "scripts": {
         "post-create-project-cmd": [
