--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "limingxinleo/phalcon-project",
     "description": "a phalcon porject for simple-subcontrollers",
     "type": "project",
-    "license": "Apache-2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "李铭昕",
