--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "limingxinleo/phalcon-project-library": "^1.3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6",
+        "phpunit/phpunit": ">=5.6",
         "phalcon/incubator": "^3.0",
         "phalcon/dd": "^1.0",
         "guzzlehttp/guzzle": "^6.3"
