--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
-        "limingxinleo/phalcon-project-library": "^1.3.2"
+        "limingxinleo/phalcon-project-library": "^1.3.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6",
         "phalcon/incubator": "^3.0",
-        "phalcon/dd": "^1.0",
+        "limingxinleo/x-phalcon-dd": "^1.0",
         "guzzlehttp/guzzle": "^6.3"
     },
     "scripts": {
