--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "ext-phalcon": "^3.0",
-        "limingxinleo/phalcon-project-library": "^1.3.3"
+        "ext-phalcon": "^3.3",
+        "limingxinleo/phalcon-project-library": "~2.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6",
