修改默认DB配置

--- a/config.example.ini
+++ b/config.example.ini
@@ -8,7 +8,7 @@ adapter  = Mysql
 host     = "127.0.0.1"
 port     = "3306"
 username = "root"
-password = "910123"
+password = null
 dbname   = "phalcon"
 charset  = "utf8"
 
