--- a/config.example.ini
+++ b/config.example.ini
@@ -22,7 +22,7 @@ prefix     = ""
 
 [mongo]
 host         = "127.0.0.1"
-port         = 27017
+port         = "27017"
 connect      = true
 timeout      = null
 replicaSet   = null
@@ -35,7 +35,7 @@ isCollection = false
 
 [memcached]
 host = "127.0.0.1"
-port = 11211
+port = "11211"
 weight = 1
 
 [log]
