增加swoole http引擎配置

--- a/config.example.ini
+++ b/config.example.ini
@@ -66,6 +66,10 @@ key      = "phalcon:queue:default"
 delayKey = "phalcon:queue:delay"
 errorKey = "phalcon:queue:error"
 
+[swoole]
+http.host = '0.0.0.0'
+http.port = 8080
+
 [controller]
 namespace = "App\Controllers"
 baseClass = "Controller"
