--- a/swoole.nginx.conf
+++ b/swoole.nginx.conf
@@ -24,7 +24,7 @@ server {
         if (!-e $request_filename) {
             set $proxy_status 1;
         }
-        if ($proxy_status ~* 1){
+        if ($proxy_status = 1){
             set $suffix "?_url=${uri}${is_args}${query_string}";
             proxy_pass http://127.0.0.1:8080$suffix;
         }
