--- a/config.example.ini
+++ b/config.example.ini
@@ -67,8 +67,13 @@ delayKey = "phalcon:queue:delay"
 errorKey = "phalcon:queue:error"
 
 [swoole]
-http.host = '0.0.0.0'
-http.port = 8080
+http.host           = '0.0.0.0'
+http.port           = 8080
+http.dispatchMode   = 3
+http.workerNum      = 4
+http.maxRequest     = 10000
+http.logLevel       = 5
+http.openTcpNodelay = 1
 
 [controller]
 namespace = "App\Controllers"
