增加守护进程

--- a/config.example.ini
+++ b/config.example.ini
@@ -74,6 +74,7 @@ http.workerNum      = 4
 http.maxRequest     = 10000
 http.logLevel       = 5
 http.openTcpNodelay = 1
+http.daemonize      = 0
 
 [controller]
 namespace = "App\Controllers"
